--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,13 +4,15 @@
 	</head>
 	<body>
 		<div>
-			<h1><a href="">Django Girls Blog</a></h1>
+			<h1><a href="">Django Coaches Blog</a></h1>
 		</div>
 		
-		<div>
-			<p>published: somewhen</p>
-			<h2><a href="">Head post</a></h2>
-			<p>Zag-Zag!</p>
-		</div>
+		{% for post in posts %}
+			<div>
+				<p>{{ post.published_date }}</p>
+				<h2><a href="">{{ post.title }}</a></h2>
+				<p>{{ post.text|linebreaks }}</p>
+			</div>
+		{% endfor %}
 	</body>
 </html>
