--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Django coaches blog</title>
+		<title>Django Coaches blog</title>
 		
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -12,7 +12,8 @@
 	</head>
 	<body>
         <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
+			<a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <h1><a href="/">Django Coaches Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
