--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -40,7 +40,14 @@ h1, h2, h3, h4 {
 	width: 100%;
 }
 
-.top-menu, .top-menu: hover, .top-menu: visited{
+.top-menu, .top-menu: hover, .top-menu: visited {
+	color: #FFFFFF;
+	float: right;
+	font-size: 26pt;
+	margin-right: 20px;
+}
+
+a.top-menu {
 	color: #FFFFFF;
 	float: right;
 	font-size: 26pt;
